		  editor is exiting).
		- move ModalJFileChooser to CommonControls and use it from there.
		- allow search to work on file nodes directly (choose parent
		  node automatically when that happens).
		- fix IconComposer crashing on icons that were not instances
		  of ImageIcon.
		- deprecate VPTNode(String); force use of VPTNode(String,boolean)
		  to avoid an ugly hack in the first one.

Version 2.1.3.5 requires JDK 1.4
    [Alan Ezust]
      - Update for reading Subversion 1.4 .svn/entries files. (# 1557755 )
      - Options for placing user context menu items first in the menu order
      - Added new "goUp" action, for backspace key. Added F2, DEL and F5 shortcuts
			     to the dockable keyhandler

VERSION 2.1.3.4:
	[marcelo vanzin]
		- fix RootImporter.java: was trying to remove empty directories
		  twice.
		- remove uses of gnu.regexp, using java.util.regex instead; PV
		  now requires Java 1.4.
		- use JAXP instead of com.microstar.xml for parsing the config
		  files. WARNING: this breaks API compatibility (class NodeHandler).
		  Since I don't think anyone uses that, I'm going forward with it
		  on a minor release anyway.
		- work around a problem with the way class loaders work by
		  registering some fake dependencies at runtime.
		- allow case insensitive sorting of the tree.
		- create an action set with actions to activate groups and
		  projects available in PV, so that it's possible to assign
		  keyboard shortcuts for those actions.
		- fix an NPE when using the "create group" and "create project"
		  menu items in the "combo" box.
		- add a new method that activates a specific option pane when
		  showing the project options dialog.
		- get rid of a few deprecation warnings.
		- show the project being edited in the project options dialog
		  title.

	[alan ezust]
        - new actions: projectviewer_parent-group - opens parent group or project

        projectviewer_set-active - opens currently selected node if it is a group or project.
